# attendance

./: CMakeLists.txt
include/: Student.hpp  StudentContainer.hpp  catch.hpp
src/: Student.cpp  StudentContainer.cpp  main.cpp
tests/: StudentContainer_test.cpp  Student_test.cpp
